--- a/website1/index.html
+++ b/website1/index.html
@@ -37,7 +37,7 @@
               height="100">
               <h4 class="card-title"><b>Sarah Checoury</b></h4>
               <p class="card-text">
-                French girl, frist-year undergraduate at the Unievrsity of Warwick.
+                French girl, frist-year undergraduate at the University of Warwick.
                 <br>
                 "respirer Paris, cela conserve l'âme" 
               </p>
@@ -48,13 +48,13 @@
             <div class="card text-center">
               <p><b>Contact</b></p>
               <a href="https://www.facebook.com/SarahChecoury">
-                <i class="fa fa-facebook-square fa-2x" aria-hidden="true">facebook</i>
+                <i class="fa fa-facebook-square fa-2x" aria-hidden="true"> Facebook</i>
               </a>
-              <a href="https://www.instagram.com/sarah_chec/" 
-               <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+              <a href="https://www.instagram.com/sarah_chec/">
+               <i class="fa fa-instagram fa-2x" aria-hidden="true"> Instagram</i>
               </a>
-              <a>
-               <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+              <a href="mailto:schecoury@hotmail.fr">
+               <i class="fa fa-envelope fa-2x" aria-hidden="true"> Email Me</i>
               </a>
             </div>
           </div>
